# dsh-sdk-platform-rs

./: .gitignore  CHANGELOG.md  CODEOWNERS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  local_datastreams.json
dsh_mqtt_client/: Cargo.toml  README.md
dsh_mqtt_client/examples/: fetch_token.rs  main.rs  publish.rs  subscribe.rs
dsh_mqtt_client/src/: authentication_client.rs  config.rs  error.rs  lib.rs  model.rs  service.rs  stream_client.rs
dsh_mqtt_client/src/model/: mod.rs  mqtt_model.rs  rest_model.rs  token_request_attr.rs  utils.rs
dsh_rest_api_client/: CHANGELOG.md  Cargo.toml  README.md  UPGRADE.md  add_operation_id.py  update_openapi_spec.py
dsh_rest_api_client/.openapi-generator/: FILES
dsh_rest_api_client/docs/: ActualCertificate.md  ActualCertificateAllOf.md  AllocationStatus.md  AppCatalogApi.md  AppCatalogApp.md  AppCatalogAppConfiguration.md  AppCatalogAppConfigurationApi.md  AppCatalogAppResourcesValue.md  AppCatalogManifest.md  AppCatalogManifestApi.md  Application.md  ApplicationApi.md  ApplicationSecret.md  ApplicationVolumes.md  BaseLimitValue.md  Bucket.md  BucketAccess.md  BucketAccessConfiguration.md  BucketAccessStatus.md  BucketApi.md  BucketStatus.md  BucketWatch.md  BucketWatchApi.md  BucketWatchStatus.md  BucketaccessApi.md  Certificate.md  CertificateApi.md  CertificateStatus.md  ClientSecret.md  DataCatalogApi.md  DataCatalogAsset.md  DataCatalogAssetStatus.md  Database.md  DatabaseApi.md  DatabaseStatus.md  FlinkCluster.md  FlinkClusterApi.md  FlinkClusterStatus.md  FlinkJobManager.md  FlinkTaskManager.md  (+51 more)
dsh_rest_api_client/openapi_spec/: openapi_1_10_0.json  openapi_1_11_1.json  openapi_1_12_0.json  openapi_1_7_0.json  openapi_1_8_0.json  openapi_1_9_0.json  openapi_1_9_2.json
dsh_rest_api_client/openapi_spec/open_api_rc_1_9_0/: openapi-buckets.yml  openapi-common.yml  openapi-datacatalog.yml  openapi.yml  openapi_rc_1_9_0_modified.yml
dsh_rest_api_client/src/: lib.rs  progenitor_client.rs
dsh_rest_api_client/src/apis/: app_catalog_api.rs  app_catalog_app_configuration_api.rs  app_catalog_manifest_api.rs  application_api.rs  bucket_access_api.rs  bucket_api.rs  bucket_watch_api.rs  bucketaccess_api.rs  certificate_api.rs  configuration.rs  data_catalog_api.rs  database_api.rs  flink_cluster_api.rs  kafka_proxy_api.rs  managed_tenant_api.rs  managed_tenant_limits_api.rs  mod.rs  robot_api.rs  secret_api.rs  third_party_bucket_api.rs  thirdpartybucket_api.rs  topic_api.rs  volume_api.rs
dsh_rest_api_client/src/models/: actual_certificate.rs  actual_certificate_all_of.rs  allocation_status.rs  app_catalog_app.rs  app_catalog_app_configuration.rs  app_catalog_app_resources_value.rs  app_catalog_manifest.rs  application.rs  application_secret.rs  application_volumes.rs  base_limit_value.rs  bucket.rs  bucket_access.rs  bucket_access_configuration.rs  bucket_access_status.rs  bucket_status.rs  bucket_watch.rs  bucket_watch_status.rs  certificate.rs  certificate_status.rs  client_secret.rs  data_catalog_asset.rs  data_catalog_asset_status.rs  database.rs  database_status.rs  flink_cluster.rs  flink_cluster_status.rs  flink_job_manager.rs  flink_task_manager.rs  health_check.rs  kafka_proxy.rs  kafka_proxy_status.rs  kafka_proxy_validation.rs  limit_value.rs  limit_value_certificate_count.rs  limit_value_certificate_count_all_of.rs  limit_value_consumer_rate.rs  limit_value_consumer_rate_all_of.rs  limit_value_cpu.rs  limit_value_cpu_all_of.rs  (+33 more)
dsh_sdk/: CHANGELOG.md  CONNECT_PROXY_VPN_LOCAL.md  Cargo.toml  ENV_VARIABLES.md  README.md  migration.md
dsh_sdk/examples/: custom_metrics.rs  dlq_implementation.rs  expose_metrics.rs  graceful_shutdown.rs  http_protocol_example.rs  kafka_example.rs  kafka_proxy.rs  management_api_token_fetcher.rs  mqtt_example.rs  mqtt_protocol_client.rs  mqtt_token_fetcher.rs  mqtt_token_fetcher_specific_claims.rs  mqtt_ws_example.rs  produce_consume.rs  protocol_authentication_full_mediation.rs  protocol_authentication_partial_mediation.rs  protocol_token_fetcher.rs  protocol_token_fetcher_specific_claims.rs  rest_api_token_fetcher.rs  schema_store_api.rs
dsh_sdk/src/: datastream.rs  dlq.rs  dsh.rs  error.rs  graceful_shutdown.rs  lib.rs  metrics.rs  mqtt_token_fetcher.rs  rest_api_token_fetcher.rs  utils.rs
dsh_sdk/src/certificates/: bootstrap.rs  error.rs  mod.rs  pki_config_dir.rs  sign_certificates.rs
dsh_sdk/src/datastream/: error.rs  mod.rs
dsh_sdk/src/dsh/: bootstrap.rs  certificates.rs  config.rs  datastream.rs  local.rs  mod.rs  pki_config_dir.rs  properties.rs  rest_api.rs  utils.rs
dsh_sdk/src/dsh_old/: bootstrap.rs  certificates.rs  config.rs  datastream.rs  error.rs  mod.rs  pki_config_dir.rs  properties.rs
dsh_sdk/src/management_api/: error.rs  mod.rs  token_fetcher.rs
dsh_sdk/src/protocol_adapters/: error.rs  mod.rs
dsh_sdk/src/protocol_adapters/http_protocol/: client.rs  config.rs  mod.rs  reqwest.rs
dsh_sdk/src/protocol_adapters/kafka_protocol/: config.rs  mod.rs  rdkafka.rs
dsh_sdk/src/protocol_adapters/mqtt_protocol/: mod.rs
dsh_sdk/src/protocol_adapters/token/: api_client_token_fetcher.rs  error.rs  mod.rs
dsh_sdk/src/protocol_adapters/token/data_access_token/: claims.rs  mod.rs  request.rs  token.rs
dsh_sdk/src/protocol_adapters/token/rest_token/: claims.rs  mod.rs  request.rs  token.rs
dsh_sdk/src/protocol_adapters/token_fetcher/: api_client_token_fetcher.rs  data_access_token.rs  error.rs  mod.rs  rest_token.rs
dsh_sdk/src/schema_store/: api.rs  client.rs  error.rs  mod.rs  request.rs
dsh_sdk/src/schema_store/types/: compatibility.rs  mod.rs  subject_strategy.rs  subjects.rs
dsh_sdk/src/utils/: dlq.rs  error.rs  graceful_shutdown.rs  http_client.rs  metrics.rs  mod.rs  platform.rs
dsh_sdk/src/utils/dlq/: dlq.rs  error.rs  headers.rs  mod.rs  types.rs
dsh_sdk/test_resources/: invalid_json.json  valid_datastreams.json
example_dsh_service/: .dockerignore  Cargo.toml  Dockerfile  README.md  deployer.sh  makefile  service_config.json
example_dsh_service/src/: custom_metrics.rs  main.rs  metrics.rs
(+37 files in other folders)
