[workspace]
members = [
    "dsh_sdk"
]
readme = "README.md"
resolver = "2"

[workspace.package]
authors = [
    "KPN",
]
description = "SDK for KPN Data Services Hub"
edition = "2021"
exclude = ["/tmp", "/test_files"]
homepage = "https://www.kpn.com/dsh"
keywords = ["kpn", "dsh", "sdk"]
license = "Apache-2.0"
repository = "https://github.com/kpn-dsh/dsh-sdk-platform-rs"


[profile.dev.package.num-bigint-dig]
opt-level = 3