[workspace]
members = [ "dsh_mqtt_client",
    "dsh_sdk",
    "example_dsh_service",
]
resolver = "2"

[workspace.package]
authors = [
    "KPN",
]
description = "SDK for KPN Data Services Hub"
edition = "2021"
exclude = ["/tmp", "/test_files"]
homepage = "https://www.kpn.com/dsh"
keywords = ["kpn", "dsh", "sdk"]
license = "Apache-2.0"
repository = "https://github.com/kpn-dsh/dsh-sdk-platform-rs"

[workspace.dependencies]
#move other shared dependencies here
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"]}