[workspace]
members = [
    "example_dsh_service",
    "dsh_sdk",
    "dsh_rest_api_client",
    "dsh_mqtt_client"
]
resolver = "2"

[workspace.package]
authors = [
    "KPN",
]
description = "SDK for KPN Data Services Hub"
edition = "2021"
exclude = ["/tmp", "/test_files"]
homepage = "https://www.kpn.com/dsh"
license = "Apache-2.0"
repository = "https://github.com/kpn-dsh/dsh-sdk-platform-rs"

[workspace.dependencies]
#move other shared dependencies here
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"]}
