[package]
name = "dsh_mqtt_client"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1", features = [] }
base64 = "0.22"
lazy_static = "1.4"
lombok = "0.4"
reqwest = { workspace = true }
rustls = "0.23"
rustls-native-certs = { version = "0.7", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
uuid = { version = "1.6", features = ["v4"] }
tokio = { version = "1.36", features = ["full"] }
