[package]
name = "dsh_rest_api_client"
version = "0.1.0"
edition = "2021"
license.workspace = true
readme = "README.md"

[dependencies]
bytes = { workspace = true }
chrono = { version = "0.4.38", default-features=false, features = ["serde"] }
futures-core = "0.3"
percent-encoding = "2.3"
reqwest = { workspace = true, default-features=false, features = ["json", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_urlencoded = "0.7"
serde_json = { workspace = true }
