[package]
name = "dsh_rest_api_client"
version = "0.5.0"
edition = "2021"
license.workspace = true
readme = "README.md"
description = "REST API client for KPN Data Services Hub"
homepage.workspace = true
repository.workspace = true
keywords = ["kpn", "dsh", "rest", "api", "client"]

[dependencies]
bytes = "1.6"
chrono = { version = "^0.4.20", default-features=false, features = ["serde"] }
futures-core = "0.3"
percent-encoding = "2.3"
regress = "0.10"
reqwest = { version = "0.12", default-features=false, features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"
serde_json = "1.0"
