[package]
name = "dsh_rest_api_client"
version = "0.6.0"
edition = "2021"
license.workspace = true
readme = "README.md"
description = "REST API client for KPN Data Services Hub"
homepage.workspace = true
repository.workspace = true
keywords = ["kpn", "dsh", "rest", "api", "client"]

[dependencies]
bytes = { version = "1.9", optional = true }
chrono = { version = "^0.4.20", default-features=false, features = ["serde"],  optional = true }
futures-core = { version = "0.3", optional = true }
percent-encoding = { version = "2.3", optional = true }
regress = { version ="0.10", optional = true }
reqwest = { version = "0.13", default-features=false, features = ["json", "query", "stream"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_urlencoded = { version = "0.7", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["client"]

types = [ "serde", "serde_json", "serde_urlencoded", "chrono", "regress"]
client = ["types", "bytes", "futures-core", "percent-encoding", "regress", "reqwest"]