[package]
authors.workspace = true
description = "SDK for KPN Data Services Hub"
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords = ["kpn", "dsh", "sdk"]
license.workspace = true
name = "dsh_sdk"
readme = 'README.md'
repository.workspace = true
version = "0.6.3"

[package.metadata.docs.rs]
all-features = true

[dependencies]
apache-avro = {version = "0.18", optional = true }
base64 = {version = "0.22", optional = true }
bytes = { version = "1.6", optional = true }
hyper = { version = "1.5", default-features = false, optional = true }
http-body-util = { version = "0.1", optional = true }
hyper-util = { version = "0.1", default-features = false, optional = true }
log = "0.4"
pem = {version = "3", optional = true }
protofish = { version = "0.5.2", optional = true }
rcgen = { version = "0.13", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"], optional = true }
rdkafka = { version = "0.37", default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"], optional = true }
sha2 = { version = "0.10", optional = true}
thiserror = "2.0"
tokio = { version = "^1.35", features = ["signal", "sync", "time", "macros"], optional = true }
tokio-util = { version = "0.7", default-features = false, optional = true }

[features]
# default = ["bootstrap", "graceful-shutdown", "metrics", "rdkafka-ssl", "schema-store"]
default = ["bootstrap", "kafka", "rdkafka-config"]

bootstrap = ["rcgen", "reqwest", "pem", "serde_json", "tokio/rt-multi-thread"] 
kafka = ["bootstrap"]
rdkafka-config = ["rdkafka", "kafka"] # Impl of config trait only
schema-store = ["bootstrap", "reqwest", "serde_json", "apache-avro", "protofish"]
graceful-shutdown = ["tokio", "tokio-util"]
management-api-token-fetcher = ["reqwest"]
protocol-token = ["base64", "reqwest", "serde_json", "sha2", "tokio/sync"]
metrics = [ "hyper/server", "hyper/http1" , "hyper-util/tokio", "http-body-util", "tokio", "bytes"]
dlq = ["tokio", "bootstrap", "rdkafka-config", "rdkafka/cmake-build", "rdkafka/ssl-vendored", "rdkafka/libz", "rdkafka/tokio", "graceful-shutdown"]

# http-protocol-adapter = ["protocol-token"]
# mqtt-protocol-adapter = ["protocol-token"]

[dev-dependencies]
# Dependencies for the test
mockito = "1.1.1"
openssl = "^0.10.73"
tokio = { version = "^1.35", features = ["full"] }
hyper = { version = "1.3", features = ["full"] }
serial_test = "3.1.0"
dsh_rest_api_client = { path = "../dsh_rest_api_client", version = "0.4.0" }
# Dependencies for the examples
dsh_sdk = { features = ["dlq"], path = "." }
env_logger = "0.11"
rdkafka = { version = "0.37", features = ["cmake-build", "ssl-vendored"], default-features = true }
prometheus = { version = "0.14", features = ["process"] }
rumqttc = { version = "0.24", features = ["websocket"] }