[package]
name = "dsh-rs-example"
version = "0.1.0"
description = "An example of DSH service using the dsh-sdk crate"
edition = "2021"

[dependencies]
dsh_sdk = { path = "../dsh_sdk", version = "0.3", features = ["rdkafka-ssl-vendored"] }
log = "0.4"
env_logger = "0.11"
tokio = { version = "^1.35", features = ["full"] }